# upstageailab-langchain-pjt-langchain_8

./: .env.template  .gitignore  README.bk.md  README.md  blog-agent-graph.md  project_plan.md  pyproject.toml  pyproject.toml.backup.1756312987  readme.md  redis-installation-guide.md  ruff.toml
.chainlit/: config.toml
.files/0db4bee0-113c-4e5b-bbee-9d4746e4f908/: 859cec08-9d9a-4dce-beae-06e45f638dba.txt  87547351-7d5d-4e52-a67c-cf49453d7e4e.txt
.files/6d040a29-3c2c-4c8a-bd1d-193688e20fff/: 289613b4-f4ea-48c2-997d-8bf0c8be71e4.txt
configs/: config.yaml
configs/bk/: config.toml  config.yaml  config_0901.yaml  config_0904.yaml
docs/: 00_PROJECT_OVERVIEW.md  01_PROJECT_ARCHITETURE.md  02_USAGE_GUIDE.md  03_CONTEXT_LOG.md  04_FAQ.md  05_DATA_CONTEXT.md  0_BLOG_SETUP_CHIRPY.md  1_INSTALLATION.md  2_ARCHITECTURE.md  2_USAGE_GUIDE.md  3_ARCHITECTURE.md  4_CUSTOMIZATION.md  5_CONTRIBUTING.md  5_CONTRIBUTION.md  6_TROUBLESHOOTING.md
docs/assets/diagram/: memory.md
docs/assets/summary/: changes.md
docs/bk/: project_guide.md
docs/feature-summary/: 아키텍처 다이어그램 (Mermaid).md  추가된 기능 요약.md  파일 변경 내역.md  프로젝트 요약.md
docs/guide/: CREATE_GITHUB_PAGES.md  MODEL_COMPARISION.md
docs/notes/: dev-faq.md  dev-notes.md  dev-usage.md  langchain-prj-scope.md  memory-plan-project.md  memory-plan.md  memory-test-guide.md  multiple-prompts.md  simple-dev-prompt.md
docs/notes/dev-context/: 03_CONTEXT_LOG.md
docs/notes/dev-plans/: conversational-memory-plan.md
docs/notes/dev-prompts/: conversational-prompts.yaml
docs/notes/dev-usage/: poetry-venv.md  usage-guide2.md
docs/notes/diagrams/: BlogContentAgent-refactor.md  feature-langgraph.md  local-image-processing.md  memory-architecture.md  memory-phase1.md
notebooks/minju/: test_document_preprocessor.ipynb  test_tavily.ipynb
notebooks/yuiyeong/: 20250819-setting.ipynb  20250820-hello-langchain-world.ipynb
output/sample/: llama_index의_이해.md  간단항_llama_index_사용법.md
prompts/: blog_prompts.yaml  multiple-prompts.yaml  prompts.yaml
prompts/bk/: prompts-actions-idea.yaml  prompts-old.yaml  prompts-wb-kr.yaml  prompts-wb.yaml
public/: custom.css  custom.js
scripts/: agent_script.py  blog_generation.py  headless_test.py  init-instance.sh  smoke_chainlit_ui.py  test_parser.py  tools.py
src/: __init__.py  agent.py  app.py  artifacts.py  audio_processor.py  caching.py  chainlit_app.py  config.py  document_preprocessor.py  generation.py  graph.py  indexing.py  ingestion.py  logger.py  main.py  prompt_loader.py  retriever.py  tokens.py  vector_store.py  vision_processor.py
src/ui/: enums.py
src/ui/chainlit/: actions.py  agent_factory.py  callbacks.py  handlers.py  icons.py  message_helpers.py  session_helpers.py  settings.py  settings_core.py  utils.py
src/ui/components/: contents_editor.py  file_uploader.py  github_auth.py  publisher.py
tests/: test_audio.py  test_chainlit_edit_callbacks.py  test_contents_editor_normalize.py  test_settings_core.py  test_utils_rebuild.py  test_vision.py
tools/: README_tools.md  mem_report.sh  mem_tui.py
