[tool.poetry]
name = "upstageailab-langchain-pjt-langchain-8"
version = "1.0.0"
description = "Blog Content Creator Agent"
authors = [
    "Jo Uiyoung <joyuiyeong@gmail.com>",
    "Ko Minju <alswn7212@gmail.com>",
    "Kim Hyoseok <hskimh1982@gmail.com>",
    "Park Seongjin <psjin2024p@gmail.com>",
    "Jo Eunbyeol <01028700520eb@gmail.com>",
    "Choi Ungbi <wchoi189@gmail.com>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "==3.11.11"
python-dotenv = ">=1.0.1,<2.0.0"
streamlit = ">=1.36.0,<2.0.0"
langchain = ">=0.2.1,<0.3.0"
langgraph = ">=0.0.51,<0.1.0"
langchain-core = ">=0.1.52,<0.2.0"
langchain-text-splitters = ">=0.0.2,<0.1.0"
langchain-community = ">=0.2.1,<0.3.0"
langchain-openai = ">=0.1.7,<0.2.0"
langchain-upstage = ">=0.1.3,<0.2.0"
langchain-ollama = ">=0.0.9,<0.1.0"
langchain-chroma = ">=0.1.1,<0.2.0"
chromadb = ">=0.5.0,<0.6.0"
pygithub = ">=2.3.0,<3.0.0"
pymupdf = ">=1.24.4,<2.0.0"
pyyaml = ">=6.0.1,<7.0.0"
unstructured = { extras = ["pdf", "elements"], version = ">=0.14.5,<0.15.0" }
langchain-unstructured = ">=0.0.3,<0.1.0"
paddleocr = ">=2.7.3,<2.8.0"
paddlepaddle = ">=2.6.1,<2.7.0"
langchain-huggingface = ">=0.0.1,<0.1.0"
pysqlite3-binary = { version = ">=0.5.2,<0.6.0", platform = "linux" }
sentence-transformers = ">=3.0.1,<4.0.0"
langchain-tavily = ">=0.0.10,<0.1.0"
langchain-redis = ">=0.0.5,<0.1.0"
redis = ">=5.0.4,<6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.4,<0.5.0"
pre-commit = ">=3.7.1,<4.0.0"
jupyterlab = ">=4.2.1,<5.0.0"
notebook = ">=7.2.0,<8.0.0"
ipykernel = ">=6.29.4,<7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
