[project]
name = "upstageailab-langchain-pjt-langchain-8"
version = "1.0.0"
description = "Blog Content Creator Agent"
authors = [
    {name = "Jo Uiyoung",email = "joyuiyeong@gmail.com"},
    {name = "Ko Minju",email = "alswn7212@gmail.com"},
    {name = "Kim Hyoseok",email = "hskimh1982@gmail.com"},
    {name = "Park Seongjin",email = "psjin2024p@gmail.com"},
    {name = "Jo Eunbyeol",email = "01028700520eb@gmail.com"},
    {name = "Choi Ungbi",email = "wchoi189@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "langchain-upstage (>=0.7.3,<0.8.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langgraph (>=0.6.5,<0.7.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "pygithub (>=2.7.0,<3.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "unstructured[pdf]",
    "unstructured[pdf,elements] (>=0.14.5,<0.15.0)",
    "langchain-unstructured",
    "paddleocr",
    "paddlepaddle",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "pysqlite3-binary (>=0.5.4,<0.6.0); sys_platform != 'darwin'",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "langchain-tavily (>=0.1.1,<0.2.0)",
    "langchain-redis (>=0.1.1,<0.2.0)",
    "redis (>=5.0.3,<6.0.0)",
    "streamlit-ace (>=0.1.1,<0.2.0)",
    "chainlit ==2.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff (>=0.12.9,<0.13.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
package-mode = false
packages = [ { include = "src" } ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"